# HowYouSeeMe

./: .gitattributes  .gitignore  .gitmodules  CameraTrajectory.txt  KeyFrameTrajectory.txt  LICENSE  README.md  WARP.md
.kiro/steering/: no-useless-docs.md
data/faces/: face_database.pkl  metadata.json
docs/: Ally.md  Ally_Audio_Enhancements.md  AriesUI.md  BlueLily.md  BlueLily_ROS2_Integration.md  BlueLily_SLAM_Integration_Guide.md  CV_PIPELINE_V2_GUIDE.md  CV_Pipeline_Guide.md  DroidCore.md  FACE_RECOGNITION_QUICKSTART.md  Future_Enhancement_Roadmap.md  Getting_Started.md  HowYouSeeMe_Plan.md  INSIGHTFACE_INTEGRATION.md  Kinect2_ROS2_Bridge_Setup.md  Kinect_SLAM_Integration.md  MCP_API_Specification.md  Meta_SAM3.md  PHASE1_KALIBR_CALIBRATION.md  PHASE2_ORB_SLAM3_SETUP.md  PHASE3_TSDF_INTEGRATION.md  QUICK_START_CV_PIPELINE.md  README.md  ROBOT_HEAD_SETUP.md  RVIZ_VISUALIZATION_GUIDE.md  Resource_Management.md  SAM2_SERVER_GUIDE.md  SLAM_Performance_Optimization.md  SLAM_QUICK_REFERENCE.md  SLAM_Troubleshooting.md  YOLO11_INTEGRATION.md
kalibr_configs/: README.md  bluelily_imu.yaml  kinect2_cam.yaml  target.yaml
orb_slam3_configs/: Kinect2_RGBD_IMU.yaml  README.md
ros2_ws/log/: latest_build
ros2_ws/src/bluelily_bridge/: CMakeLists.txt  package.xml
ros2_ws/src/bluelily_bridge/launch/: bluelily_imu.launch.py
ros2_ws/src/bluelily_bridge/src/: bluelily_imu_node.cpp
ros2_ws/src/cv_pipeline/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/cv_pipeline/config/: models.yaml
ros2_ws/src/cv_pipeline/cv_pipeline/: semantic_projection_node.py
ros2_ws/src/cv_pipeline/launch/: cv_pipeline.launch.py
ros2_ws/src/cv_pipeline/python/: ADD_NEW_MODEL_GUIDE.md  cv_model_manager.py  insightface_worker.py  sam2_server_v2.py  sam2_worker.py
ros2_ws/src/cv_pipeline/src/: cv_pipeline_node.cpp
ros2_ws/src/kinect2_slam/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/kinect2_slam/kinect2_slam/: __init__.py  event_checkpointer_node.py  live_enrichment_node.py  mcp_server.py  named_memory_node.py  rerun_bridge_node.py  tsdf_integrator_node.py  world_synthesiser_node.py
ros2_ws/src/kinect2_slam/launch/: howyouseeme_memory.launch.py  orb_slam3.launch.py
ros2_ws/src/kinect2_slam/src/: orb_slam3_node.cpp  rerun_logger_cpp_node.cpp
rviz_configs/: README.md  tsdf_rviz.rviz
scripts/: QUICK_REFERENCE.txt  README.md  build_memory_system.sh  build_phase2_3.sh  check_frame_alignment.sh  check_phase2_3_deps.sh  cv_pipeline_menu.sh  debug_semantic.sh  diagnose_markers.sh  extract_kinect_intrinsics.sh  fix_orb_slam3_cpp14.sh  install_hsemotion.sh  install_insightface.sh  install_rerun_cpp.sh  kalibr_to_orb_slam3.py  kalibr_to_tf2.py  kill_all_slam.sh  launch_memory_system.sh  patch_orb_slam3_cmake.sh  publish_kinect_optical_frame.sh  record_kalibr_bag.sh  rerun_live_sample.py  restart_orb_slam3_only.sh  restart_semantic_only.sh  run_complete_slam_system.sh  run_phase2_3.sh  setup_orb_slam3.sh  start_rerun_logger.sh  test_complete_system.sh  test_memory_system.sh  verify_bluelily_bridge.sh  verify_orb_slam3.sh
